--- a/socialcommon/src/main/res/xml/file_paths.xml
+++ b/socialcommon/src/main/res/xml/file_paths.xml
@@ -1,14 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <paths>
-    <external-files-path name="path_external" path="."/>
-    <root-path name="path_root" path=""/>
+    <external-files-path
+        name="path_external"
+        path="." />
+    <root-path
+        name="path_root"
+        path="" />
     <!--3、对应外部内存卡根目录：Environment.getExternalStorageDirectory()   <external-path name="ext_root" path="/" />-->
-    <external-files-path name="opensdk_external" path="Images/tmp"/>
-    <root-path name="opensdk_root" path=""/>
+    <external-files-path
+        name="opensdk_external"
+        path="Images/tmp" />
+    <root-path
+        name="opensdk_root"
+        path="" />
     <!-- 等同于 Context.getExternalFilesDir(null)-->
-    <external-files-path name="share_files" path="." />
-    <external-path name="ext_root" path="picture/" />
-    <external-files-path name="sharedata" path="shareData/"/>
+    <external-files-path
+        name="share_files"
+        path="." />
+    <external-path
+        name="ext_root"
+        path="picture/" />
+    <external-files-path
+        name="sharedata"
+        path="shareData/" />
     <!--
   1、name对应的属性值，开发者可以自由定义；
   2、path对应的属性值，当前external-path标签下的相对路径
