--- a/testapp/src/main/res/layout/activity_main.xml
+++ b/testapp/src/main/res/layout/activity_main.xml
@@ -155,6 +155,19 @@
                 android:text="微信" />
 
             <Button
+                android:id="@+id/btn_login_wxqr"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="微信扫码" />
+
+            <ImageView
+                android:id="@+id/iv"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <Button
                 android:id="@+id/btn_login_qq"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
